--- a/web/server/static/bower.json
+++ b/web/server/static/bower.json
@@ -18,6 +18,7 @@
     "angular-xeditable": "^0.6.0",
     "components-font-awesome": "^4.7.0",
     "angular-thumbnails": "^0.2.1",
-    "angular-upload": "^1.0.12"
+    "angular-upload": "^1.0.12",
+    "ng-file-upload": "^12.2.13"
   }
 }
